practice/8.ci-cd/app/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geekbrains
spec:
  progressDeadlineSeconds: 300
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
<<<<<<< HEAD
          image:  __IMAGE__
=======
          image: __IMAGE__
>>>>>>> 059774a05cc2a8cb2f39046cb82a5a779a7bd94b
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8000
